--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(BADVPN C)
 
 if(EXPORT_MODULE)
-add_definitions("-fPIC")
+add_definitions("-DEXPORT_MODULE -fPIC")
 endif(EXPORT_MODULE)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
